src/objects/Code_Accelerator_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Stage__c</fullName>
        <label>API Stage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Token__c</fullName>
        <label>API Token</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_API_Token__c</fullName>
        <label>AWS API Token</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Endpoint__c</fullName>
        <label>AWS Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_GitHub_Client_Id__c</fullName>
        <label>CS GitHub Client Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_GitHub_Client_Secret__c</fullName>
        <label>CS GitHub Client Secret</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Consumer_Key__c</fullName>
        <label>SR Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Consumer_Secret__c</fullName>
        <label>SR Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Org_Template_Id__c</fullName>
        <label>SR Org Template Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Redirect_URL__c</fullName>
        <label>SR Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_User_Session_Id__c</fullName>
        <label>SR User Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Code Accelerator Setting</label>
    <pluralLabel>Code Accelerator Settings</pluralLabel>
</CustomObject>